--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     <title>hello electron</title>
 </head>
 <body>
-    <h1 style="width: 20%;margin: auto;">hello electron!</h1>
+    <h1 style="width: 100vw;text-align: center">hello electron!</h1>
+    <h2 style="width: 100vw;text-align: center">lalala,可以食用啦!</h2>
 </body>
 </html>
